chore: add more benchmarks