@@ -6,8 +6,10 @@
     <parent>
         <groupId>io.github.kusoroadeolu</groupId>
         <artifactId>fc</artifactId>
-        <version>0.0.1</version>
+        <version>0.1.0</version>
     </parent>
+
+    <artifactId>fc-core</artifactId>
 
     <dependencies>
         <dependency>
@@ -17,6 +19,36 @@
         </dependency>
     </dependencies>
 
-    <artifactId>fc-core</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -XX:-RestrictContended
+                        --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+
+
 
 </project>
